tests/auto/qml/qmllint/data/EnumAccess2.qml
@@ -1,0 +1,9 @@
+import QtQuick 2.0
+
+Item {
+    enum Status {
+        On, Off
+    }
+
+    property int status: EnumAccess1.Status.Off
+}
